# bindgen_helpers

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli.rs
src/: config.rs  define_enum.rs  helpers.rs  lib.rs  renamer.rs
tests/: Cargo.toml  enums.rs
tests/src/: c_enum.rs  cli.rs  define_enum.rs  helpers.rs  lib.rs  renames.rs
